test/compile-fail/resolution/use-mod-self/expected.txt
error: `self` imports are only allowed within a { } list
 --> top.rhdl:3:7
  |
3 | use a::self;
  |        ^^^^ 
